--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ gulp/version.json
 # Папка с собранными файлами проекта
 # build/
 # trash/~$рассчет колонок.xlsx
+trash/~$Таблица для БД — копия.xlsx
